RESOLVED FIXED238859
Full screen video progress bar flickers after dragging it.
https://bugs.webkit.org/show_bug.cgi?id=238859
Summary Full screen video progress bar flickers after dragging it.
Jean-Yves Avenard [:jya]
Reported 2022-04-06 03:17:43 PDT
Full screen video progress bar flickers after dragging it.
Attachments
Patch (3.47 KB, patch)
2022-04-06 03:25 PDT, Jean-Yves Avenard [:jya]
no flags
Jean-Yves Avenard [:jya]
Comment 1 2022-04-06 03:23:50 PDT
Jean-Yves Avenard [:jya]
Comment 2 2022-04-06 03:25:15 PDT
EWS
Comment 3 2022-04-07 15:43:07 PDT
Committed r292572 (249410@main): <https://commits.webkit.org/249410@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456798 [details].
Note You need to log in before you can comment on or make changes to this bug.