Full screen video progress bar flickers after dragging it. https://bugs.webkit.org/show_bug.cgi?id=238859 rdar://90412851

A WebAVPlayerController pretends to be an AVPlayerController by
implementing most methods of it, but not all.
When dragging the progress bar, AVKit calls the method isSeeking to
determine if we are seeking or not and if true will call seekToTime
to retrieve the last seek position and display the progress bar
accordingly.
Those two methods weren't implemented by WebAVPlayerController.
At present, we don't have information about the seeking operation having
completed or not, but we do know if we are scrubbing. So map isSeeking
to isScrubbing, this approximation is sufficient at present.

Reviewed by Jer Noble.

* platform/ios/WebAVPlayerController.h:
* platform/ios/WebAVPlayerController.mm:
(-[WebAVPlayerController seekToTime:]):
(-[WebAVPlayerController seekToTime:toleranceBefore:toleranceAfter:]):
(-[WebAVPlayerController isSeeking]):
(-[WebAVPlayerController seekToTime]):

Canonical link: https://commits.webkit.org/249410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292572 268f45cc-cd09-0410-ab3c-d52691b4dbfc